fix: Some align and size text

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,6 @@
 }
 
 .color-changing-gradient-text {
-  /* color: #ffaf49; */
-  /* background-image: linear-gradient(to right, #ef4fa6, #61d800, #b39afd, #ffaf49); */
   background-image: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
   background-clip: text;
   animation: color-change 10s infinite linear;
@@ -29,49 +27,3 @@
   }
 }
 
-.spacing-1em{
-  letter-spacing: .1em;
-}
-
-
-.icon-hover {
-  transition: all 0.5s;
-  cursor: pointer;
-}
-
-.icon-hover:hover {
-  transform: scale(1.1);
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
-}
-
-
-.tool-circle {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.tool-circle__inner {
-  width: 70px;
-  height: 70px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.tool-circle__tool {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: #ccc;
-  cursor: pointer;
-}
-
-.tool-circle__active-tool {
-  color: #fff;
-  background-color: #000;
-}
